# get-docs

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
src/api/: redis_store.py  router.py
src/core/: crawler.py  github_discovery.py  github_fetcher.py  link_crawler.py  llms_txt_fetcher.py  llms_txt_parser.py  orchestrator.py  page_fetcher.py  robots_parser.py  robots_tags_parser.py  robots_txt_parser.py  sitemap_parser.py
src/models/: enums.py  requests.py  responses.py
src/parsing/: html_extractor.py  html_to_md.py  md_utils.py  mdx_strip.py
src/utils/: http_client.py  lang_utils.py  logger.py  rate_limiter.py  url_utils.py  version_utils.py
tests/: conftest.py  test_api.py  test_crawler.py  test_github_discovery.py  test_github_fetcher.py  test_html_extractor.py  test_html_to_md.py  test_http_client.py  test_lang_utils.py  test_link_crawler.py  test_llms_txt_fetcher.py  test_llms_txt_parser.py  test_md_utils.py  test_mdx_strip.py  test_orchestrator.py  test_page_fetcher.py  test_rate_limiter.py  test_responses.py  test_robots_parser.py  test_robots_tags_parser.py  test_robots_txt_parser.py  test_sitemap_parser.py  test_url_utils.py  test_version_utils.py
