[project]
name = "get-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.132.0",
    "httpx>=0.28.1",
    "markitdown>=0.1.5",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.13.1",
    "redis[hiredis]>=7.3.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
